charts/argo-cd/argocd-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.gam-linux.win
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
          name: 'argocd-server'
          port:
            number: 80
